# kbox-firmware

./: .gdbinit  .gitignore  .syntastic_cpp_config  .travis.yml  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  Makefile  NMEA2000_teensy.cpp  README.md  TODO  appveyor.yml  esp-crash.py  esp32-crash.py  esp_extra.py  openocd.cfg  platformio.ini  pyproject.toml
extras/config/: default-config.json  disable-everything.json  kbox-config.json
extras/performance/: boatSpeedCorr.cal  polarData.pol  polarData_oCPN.pol
lib/: README.md  readme.txt
lib/Adafruit_BMP280_Library/: Adafruit_BMP280.cpp  Adafruit_BMP280.h
lib/Adafruit_BNO055/: Adafruit_BNO055.cpp  Adafruit_BNO055.h
lib/Adafruit_INA219/: Adafruit_INA219.cpp  Adafruit_INA219.h
lib/Arduino-PID-Library/: PID_v1.h
lib/ArduinoJson/: appveyor.yml  library.properties
lib/ArduinoJson/test/IntegrationTests/: CMakeLists.txt
lib/Debug/: Debug.cpp  Debug.h
lib/FlexCAN_Library/: FlexCAN.cpp  FlexCAN.h  FlexCAN.kdev4  README.md
lib/IniFile/src/: IniFile.cpp  IniFile.h
lib/KBox/: KBox.cpp  KBox.h  KMessage.cpp  KMessage.h  MFD.h  README.md  TaskManager.h  pin.h
lib/KBox/drivers/: Display.h  GC.h  board.h  esp8266.cpp
lib/KBox/src/: KBox.cpp  KBox.h  KBoxDebug.cpp  KMessage.cpp  KMessage.h  KMessageNMEAVisitor.cpp  KMessageNMEAVisitor.h  MFD.cpp  MFD.h  NMEA2000Message.cpp  RudderSensorTask.cpp  TaskManager.cpp  TaskManager.h  pin.h
lib/KBox/tasks/: ADCTask.cpp  ADCTask.h  BarometerTask.cpp  BarometerTask.h  IMUTask.cpp  IMUTask.h  NMEA2000Task.cpp  NMEA2000Task.h  NMEAReaderTask.cpp  NMEAReaderTask.h  RunningLightTask.h  WiFiTask.cpp  WiFiTask.h
lib/KBox/test/: .gitignore  KBoxTest.h  KMessageNMEAVisitorTest.cpp  Makefile  NMEASentenceBuilderTest.cpp  nmea_test.cpp  slip_test  slip_test.cpp  teensy_compat.c
lib/KBoxDebug/src/: KBoxDebug.cpp  KBoxDebug.h
lib/KBoxHardware/: README.md
lib/KBoxHardware/src/: KBoxConfig.h  KBoxHardware.cpp  KBoxHardware.h  board.h
lib/KBoxLogging/: README.md
lib/KBoxLogging/src/: KBoxLoggerMultiplexer.cpp  KBoxLoggerMultiplexer.h  KBoxLoggerStream.cpp  KBoxLoggerStream.h  KBoxLogging.cpp  KBoxLogging.h
lib/List/: List.h  library.json
lib/List/src/: List.h
lib/List/test/: Makefile  test.cpp
lib/MFD/: Display.h  GC.h  MFD.cpp  MFD.h  ili9341display.cpp  ili9341display.h  pin.h
lib/NMEA2000/src/: NMEA2000.cpp  NMEA2000.h
lib/NMEA2000_teensy/: NMEA2000_teensy.cpp  NMEA2000_teensy.h  README.md  library.properties
lib/SDFat/examples/: examples
lib/SDFat/src/: SdFatConfig.h
lib/fonts/: font_DroidSans.c  font_DroidSans.h
lib/i2c_t3/: README.md  i2c_t3.cpp
lib/signalk-embedded/src/: signalk-json.c  signalk-json.h  signalk-path.c  signalk-path.h  signalk.c  signalk.h  skkv-private.h  skkv.c  skkv.h
lib/signalk-embedded/test/: .gitignore  Makefile  maintest.cpp  signalk-json-test.cpp  signalk-path-test.cpp  signalk-test.cpp  signalk-test.h  skkv-test.cpp
src/: ADCPage.cpp  ADCPage.h  BarometerPage.cpp  EncoderTestPage.cpp  EncoderTestPage.h  IMUPage.cpp  IMUPage.h  NMEA2000Page.cpp  NMEAPage.cpp  NMEAPage.h  SdcardTestPage.cpp  SdcardTestPage.h  ShuntMonitorPage.cpp  ShuntMonitorPage.h  WifiTestPage.cpp  main.cpp
src/common/algo/: List.h  crc.c  crc.h
src/common/comms/: ESPState.h  Kommand.h  KommandContext.cpp  KommandContext.h  KommandHandler.cpp  KommandHandler.h  KommandHandlerPing.cpp  KommandHandlerPing.h  KommandHandlerScreenshot.cpp  KommandHandlerScreenshot.h  KommandReader.cpp  KommandReader.h  SlipStream.cpp  SlipStream.h
src/common/config/: KBoxConfig.cpp  KBoxConfig.h
src/common/nmea/: NMEASentenceBuilder.cpp  NMEASentenceBuilder.h  NMEASentenceReader.cpp  NMEASentenceReader.h  nmea.c  nmea2000.cpp
src/common/os/: TaskManager.cpp  TaskManager.h
src/common/signalk/: KMessage.h  KMessageNMEAVisitor.cpp  KMessageNMEAVisitor.h  (+51 more)
src/esp/: ESPDebug.cpp  ESPDebug.h  ESPDebugLogger.cpp  ESPDebugLogger.h  NetServer.cpp  NetServer.h  main.cpp  main.py  net.py
src/esp32/: GraphicsBenchmark.cpp  GraphicsBenchmark.h  IOExpander.cpp  IOExpander.h  NMEA2000Task.cpp  NMEA2000Task.h  NMEASerialTask.cpp  NMEASerialTask.h  NMEAServer.cpp  NMEAServer.h  SDLogging.cpp  SDLogging.h  main.cpp
src/hardware/: board.h
src/host/: ADCPage.cpp  ADCPage.h  BarometerPage.cpp  BarometerPage.h  ClockPage.cpp  ClockPage.h  EncoderTestPage.cpp  EncoderTestPage.h  ILI9341GC.h  IMUPage.cpp  IMUPage.h  KBox.ini  KBoxConfig.cpp  KBoxConfig.h  NMEA2000Page.cpp  NMEA2000Page.h  NMEAPage.cpp  NMEAPage.h  PaintCodeHelper.h  PaintCodePage.cpp  PaintCodePage.h  SdcardTestPage.cpp  SdcardTestPage.h  SerialCommander.cpp  SerialCommander.h  ShuntMonitorPage.cpp  ShuntMonitorPage.h  WifiTestPage.cpp  WifiTestPage.h  board.h  main.cpp
src/mfd/: ili9341display.cpp  ili9341display.h  mfd.h
src/mfg/: ADCTest.h  BarometerTest.h  EncoderTest.h  IMUTest.h  MfgTest.h  N2KTest.h  NMEATest.h  NeopixelTest.h  RunningLightTest.h  SDCardTest.h  ShuntTest.h  TestHarness.cpp  TestHarness.h  main.cpp
src/nmea2000-interface/: main.cpp
src/performance/: Performance.cpp  Performance.h
src/program-esp/: ESPBootloader.cpp  ESPBootloader.h  ESPProgrammer.cpp  ESPProgrammer.h  main.cpp
src/sktool/: main.cpp  requirements.txt  sktool-test.py
src/test/: KBoxTest.h  KBoxTestLogger.cpp  KBoxTestLogger.h  KMessageNMEAVisitorTest.cpp  Makefile  NMEASentenceBuilderTest.cpp  maintest.cpp  slip_test.cpp  teensy_compat.c
tools/: esptool.py  kbox.py  kboxtester.py  paintcode.py  platformio_cfg_bsdstring.py  platformio_cfg_emscripten.py  platformio_cfg_esp.py  platformio_cfg_gitversion.py  platformio_cfg_test.py  platformio_esp32_ota.py  remote-display.py  requirements.txt
tools/log-converter/: convert.py
tools/nmea-tester/: nmea.py  requirements.txt
tools/ws-client/: package.json  ws-client.js
webfiles/: index.html
(+255 files in other folders)
